fix: replace deprecated URL constructor with URI.toURL()